[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iplanner"
version = "0.1.0"
description = "Imperative Planner for Legged Robots"
authors = [{name = "Fan Yang", email = "fanyang1@ethz.ch"}]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.7"
keywords = ["robotics", "planning", "legged-robots"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "wandb",
    "opencv-python",
    "pypose",
    "open3d==0.17.0",
    "rosnumpy",
]


[project.urls]
homepage = "https://github.com/leggedrobotics/iPlanner"
repository = "https://github.com/leggedrobotics/iPlanner.git"

[tool.setuptools.packages]
find = {}
